@@ -2,9 +2,11 @@
 
     user visible changes, admin:
     * Creation of .txt files for all files in instl directory was moved from up2s3 command to create-links command.
+    * up2s3 will upload up to the latest repo revision and not up to BASE_REPO_REV.
 
     programmer visible changes:
-    * platformHelper renamed platform_helper everywhere
+    * platformHelper renamed platform_helper everywhere.
+    * New method InstlAdmin.get_last_repo_rev
 
 4/3/2014 0.8.8 Shai Shasag <shai@waves.com>
 
